# BlockWatcher

./: .gitignore  .gitmodules  ABOUT.md  Cargo.toml  LICENSE  NOTICE  README.md  SPEC.md
app/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
app/scripts/: prepare-sidecar.mjs
app/src/: App.tsx  notifications.ts  styles.css
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: main.rs  providers.rs  sidecar.rs
app/tests/: notifications.test.ts
core/: Cargo.toml
core/examples/: status.rs
core/src/: activity.rs  blocks.rs  claude.rs  codex.rs  lib.rs  parse.rs  source.rs
core/tests/: activity.rs  integration.rs
core/tests/fixtures/: ccusage_daily.json  malformed.jsonl  session_a.jsonl  session_b.jsonl
