[package]
name = "blockwatcher-core"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
description = "Pure logic for BlockWatcher: aggregate Claude usage, local log parsing, and usage windows. No UI, no network."

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
