[package]
name = "block-watcher"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[build-dependencies]
tauri-build = { version = "2.6", features = [] }

[dependencies]
blockwatcher-core = { path = "../../core" }
chrono = "0.4"
notify = "8.2"
serde = { version = "1", features = ["derive"] }
tauri = { version = "2.11", features = ["tray-icon"] }
tauri-plugin-autostart = "2.5.1"
tauri-plugin-notification = "2.3.3"
tauri-plugin-shell = "2"
